- Minor change to auto-alias determination routine.
- Detect module_custom enhancements in the CmsModuleInfo stuff.
- Refactor admin authentication.
- More fixes to the cms_url class
- Optimize the include.php file
- Adds built-in asynchronous task processing system
- Adds the ability to reduce redundant mentions in the admin log (runs asynchronously)

CmsJobManager
- New core module to handle queued asynchronous tasks.

Content Manager
- Minor tweak to bulk delete pages.
- Minor fix to the active tab when changing a template or design.

DesignManager
- Move the designs tab of the main interface into third position.
- Implement sorting in edit design.
- Remove option menus (for now) from templates, stylesheets, and designs tab.
- Modify the template list functionality in edit-design to allow using keyboard control.   space or + to select an item on the left, and right arrow to move
- Modify the edit-design functionality to allow clicking on an attached template or stylesheet to edit it.
- Generic templates now display a usage string.
- When creating a new template, associate the new template with the default design.
- Add reset buttons to the filter forms.

News v2.50.5
- Minor fix to add category.

FileManager v1.6
- Move settings to it's own menu item under site-admin
- Fix minor problem with moving a directory.

Phar Installer v1.2
- A database account password is now required
- Upgrade routine now asks for, and tests database credentials
- Upgrade routine now rewrites the config.php file (but keeps a backup)

Search
- Convert to store all data using the InnoDB engine
- Use transactions for the addwords and deletewords stuff for performance.
- Fix problem with query and record expiry.

AdminSearch v1.0.1
- Fixes problem with use of 'Use Admin Search' permission.

ModuleManager
- Now detect if module_custom directories exist and are populated and warn about this before upgrading a module.
- Minor string changes.