@@ -24,23 +24,20 @@ require_once("../lib/include.php");
 $urlext='?'.CMS_SECURE_PARAM_NAME.'='.$_SESSION[CMS_USER_KEY];
 check_login();
 
-$gCms = cmsms();
+$gCms = \CmsApp::get_instance();
 $db = $gCms->GetDb();
 
 $dateformat = trim(cms_userprefs::get_for_user(get_userid(),'date_format_string','%x %X'));
 if( empty($dateformat) ) $dateformat = '%x %X';
 
-$result = $db->Execute("SELECT * FROM ".cms_db_prefix()."adminlog ORDER BY timestamp DESC");
-$totalrows = $result->RecordCount();
+// get the total number of records.
+$totalrows = $db->GetOne("SELECT count(timestamp) FROM ".cms_db_prefix()."adminlog");
 
-if (isset($_GET['download']))
-{
+if (isset($_GET['download'])) {
 	header('Content-type: text/plain');
 	header('Content-Disposition: attachment; filename="adminlog.txt"');
-	if ($result && $result->RecordCount() > 0)
-	{
-		while ($row = $result->FetchRow())
-		{
+	if ($result && $result->RecordCount() > 0)	{
+		while ($row = $result->FetchRow()) {
 		  echo strftime($dateformat,$row['timestamp'])."|";
 		  echo $row['username'] . "|";
 		  echo (((int)$row['item_id']==-1)?'':$row['item_id']) . "|";
@@ -60,108 +57,137 @@ $userid = get_userid();
 $access = check_permission($userid, 'Clear Admin Log');
 
 if (check_permission($userid, 'Modify Site Preferences')) {
-  if (isset($_GET['clear']) && $access) {
-    $query = "DELETE FROM ".cms_db_prefix()."adminlog";
-    $db->Execute($query);
-    echo $themeObject->ShowMessage(lang('adminlogcleared'));
-    // put mention into the admin log
-    audit('', 'Admin Log', 'Cleared');
-  }
-
-  $page = 1;
-  if (isset($_GET['page']))$page = $_GET['page'];
-
-  $limit = 20;
-  $page_string = "";
-  $from = ($page * $limit) - $limit;
-
-  if (isset($_POST["filterreset"])) {
-    set_site_preference('adminlog_filteruser','');
-    set_site_preference('adminlog_filteraction','');
-  }
-  if (isset($_POST["filterapply"])) {
-    if (isset($_POST['filteruser'])) set_site_preference('adminlog_filteruser',trim(cleanValue($_POST["filteruser"])));
-    if (isset($_POST['filteraction'])) set_site_preference('adminlog_filteraction',trim(cleanValue($_POST["filteraction"])));
-  }
-
-  $params=array();
-  $criteria ="";
-  $filterdisplay="none";
-  if (get_site_preference('adminlog_filteruser')!='') {
-    $criteria.="WHERE username=?";
-    $params=array_merge($params,array(get_site_preference('adminlog_filteruser')));
-    $filterdisplay="block";
-  }
-  if (get_site_preference('adminlog_filteraction')!='') {
-    if ($criteria!="") $criteria.=" AND ";
-    $criteria.="WHERE action LIKE ?";
-    $params=array_merge($params,array("%".get_site_preference('adminlog_filteraction')."%"));
-    $filterdisplay="block";
-  }
-
-  $result = $db->SelectLimit('SELECT * from '.cms_db_prefix().'adminlog '.$criteria.' ORDER BY timestamp DESC', $limit, $from, $params);
-  $smarty->assign("header",$themeObject->ShowHeader('adminlog'));
-
-  if ($result && $result->RecordCount() > 0)
-    {
-
-      $page_string = pagination($page, $totalrows, $limit);
-      $smarty->assign("pagestring",$page_string);
-
-    $smarty->assign("downloadlink",$themeObject->DisplayImage('icons/system/attachment.gif', lang('download'),'','','systemicon'));
-    $smarty->assign("langdownload",lang("download"));
-
-    $smarty->assign("languser",lang("user"));
-    $smarty->assign("langitemid",lang("itemid"));
-    $smarty->assign("langitemname",lang("itemname"));
-    $smarty->assign("langaction",lang("action"));
-    $smarty->assign("langdate",lang("date"));
-
-    $loglines=array();
-    while ($row = $result->FetchRow()) {
-      $one=array();
-      $one['ip_addr'] = $row['ip_addr'];
-      $one["username"]=$row["username"];
-      $one["itemid"]=($row["item_id"]!=-1?$row["item_id"]:"&nbsp;");
-      $one["itemname"]=$row["item_name"];
-      $one["action"]=$row["action"];
-      $one["date"]=strftime($dateformat,$row['timestamp']);
-
-      $loglines[]=$one;
+    if (isset($_GET['clear']) && $access) {
+        $query = "DELETE FROM ".cms_db_prefix()."adminlog";
+        $db->Execute($query);
+        echo $themeObject->ShowMessage(lang('adminlogcleared'));
+        // put mention into the admin log
+        audit('', 'Admin Log', 'Cleared');
     }
-    $smarty->assign("loglines",$loglines);
-    $smarty->assign("logempty",false);
-  }
-  else {
-    $smarty->assign("langlogempty",lang('adminlogempty'));
-    $smarty->assign("logempty",true);
-  }
 
-  $smarty->assign("clearicon","");
-  if ($access && $result && $result->RecordCount() > 0) {
-    $smarty->assign("clearicon",$themeObject->DisplayImage('icons/system/delete.gif', lang('delete'),'','','systemicon'));
-    $smarty->assign("langclear",lang('clearadminlog'));
-    $smarty->assign("sysmain_confirmclearlog",lang('sysmain_confirmclearlog'));
-  }
+    $page = ( isset($_SESSION['adminlog_page']) ) ? (int) $_SESSION['adminlog_page'] : 1;
+    if (isset($_REQUEST['page'])) {
+        $page = (int) $_REQUEST['page'];
+        $_SESSION['adminlog_page'] = $page;
+    }
 
-  $smarty->assign('filteruser',get_site_preference('adminlog_filteruser',''));
-  $smarty->assign('filteraction',get_site_preference('adminlog_filteraction',''));
-  $smarty->assign("langfilteruser",lang("filteruser"));
-  $smarty->assign("langfilteraction",lang("filteraction"));
-  $smarty->assign("langfilterapply",lang("filterapply"));
-  $smarty->assign("langfilterreset",lang("filterreset"));
-  $smarty->assign("langfilters",lang("filters"));
-  $smarty->assign("langshowfilters",lang("showfilters"));
-  $smarty->assign("filteruservalue",get_site_preference("adminlog_filteruser"));
-  $smarty->assign("filteractionvalue",get_site_preference("adminlog_filteraction"));
-  $smarty->assign("filterdisplay",$filterdisplay);
-  $smarty->assign('SECURE_PARAM_NAME',CMS_SECURE_PARAM_NAME);
-  $smarty->assign('CMS_USER_KEY',$_SESSION[CMS_USER_KEY]);
+    $limit = 25;
+    $npages = ceil($totalrows / $limit);
+    $page = max(1,min($npages,$page));
+    $from = ($page-1) * $limit;
+    $orig_filter = new StdClass;
+    $orig_filter->user = $orig_filter->action = $orig_filter->item_name = null;
+    $filter = $orig_filter;
+    if( !empty($_SESSION['adminlog_filter']) ) $_filter = $_SESSION['adminlog_filter'];
+
+    // handle filtering dialog.
+    if( isset($_POST['filterapply']) ) {
+        $filter->user = trim(cleanValue($_POST['filteruser']));
+        $filter->action = trim(cleanValue($_POST['filteraction']));
+        $filter->item_name = trim(cleanValue($_POST['filteritem']));
+        $_SESSION['adminlog_filter'] = $filter;
+        $page = 1;
+        unset($_SESSION['adminlog_page']);
+    } else if( isset($_POST['filterreset']) ) {
+        $filter = $orig_filter;
+        unset($_SESSION['adminlog_filter']);
+        $page = 1;
+        unset($_SESSION['adminlog_page']);
+    }
+    $filter_applied = ($filter === $orig_filter) ? FALSE : TRUE;
+
+    // now do the query
+    $sql = 'SELECT * FROM '.cms_db_prefix().'adminlog ';
+    $where = $parms = array();
+    if( $filter->user ) {
+        $where[] = 'username = ?';
+        $parms[] = $filter->user;
+    }
+    if( $filter->action ) {
+        $where[] = 'action LIKE ?';
+        $parms[] = '%'.$filter->action.'%';
+    }
+    if( $filter->item_name ) {
+        $where[] = 'item_name LIKE ?';
+        $parms[] = '%'.$filter->item_name.'%';
+    }
+    if( count($where) ) {
+        $sql .= ' WHERE '.implode(' AND ',$where);
+    }
+    $sql .= ' ORDER BY timestamp DESC';
+    $result = $db->SelectLimit($sql,$limit,$from,$parms);
+
+    $smarty->assign("header",$themeObject->ShowHeader('adminlog'));
+    if ($result && $result->RecordCount() > 0) {
+
+        $pagelist = array();
+        if( $npages < 20 ) {
+            for( $i = 1; $i <= $npages; $i++ ) {
+                $pagelist[$i] = $i;
+            }
+        }
+        else {
+            // first 5
+            for( $i = 0; $i < 5; $i++ ) {
+                $pagelist[$i+1] = $i+1;
+            }
+            // 3 around current page
+            for( $i = $page - 2; $i <= min($page + 2,$npages); $i++ ) {
+                if( !isset($pagelist[$i+1]) ) $pagelist[$i+1] = $i+1;
+            }
+            // last 5
+            for( $i = $npages - 5; $i < $npages; $i++ ) {
+                if( !isset($pagelist[$i+1]) ) $pagelist[$i+1] = $i+1;
+            }
+        }
+        $smarty->assign('page',$page);
+        $smarty->assign('pagelist',$pagelist);
+        $smarty->assign("downloadlink",$themeObject->DisplayImage('icons/system/attachment.gif', lang('download'),'','','systemicon'));
+        $smarty->assign("langdownload",lang("download"));
+
+        $smarty->assign("languser",lang("user"));
+        $smarty->assign("langitemid",lang("itemid"));
+        $smarty->assign("langitemname",lang("itemname"));
+        $smarty->assign("langaction",lang("action"));
+        $smarty->assign("langdate",lang("date"));
+
+        $loglines=array();
+        while ($row = $result->FetchRow()) {
+            $one=array();
+            $one['ip_addr'] = $row['ip_addr'];
+            $one["username"]=$row["username"];
+            $one["itemid"]=($row["item_id"]!=-1?$row["item_id"]:"&nbsp;");
+            $one["itemname"]=$row["item_name"];
+            $one["action"]=$row["action"];
+            $one["date"]=strftime($dateformat,$row['timestamp']);
+
+            $loglines[]=$one;
+        }
+        $smarty->assign("loglines",$loglines);
+        $smarty->assign("logempty",false);
+    }
+    else {
+        $smarty->assign("langlogempty",lang('adminlogempty'));
+        $smarty->assign("logempty",true);
+    }
+
+    $smarty->assign("clearicon","");
+    if ($access && $result && $result->RecordCount() > 0) {
+        $smarty->assign("clearicon",$themeObject->DisplayImage('icons/system/delete.gif', lang('delete'),'','','systemicon'));
+        $smarty->assign("langclear",lang('clearadminlog'));
+        $smarty->assign("sysmain_confirmclearlog",lang('sysmain_confirmclearlog'));
+    }
+
+    $smarty->assign("langfilteruser",lang("filteruser"));
+    $smarty->assign("langfilteraction",lang("filteraction"));
+    $smarty->assign("langfilterapply",lang("filterapply"));
+    $smarty->assign("langfilterreset",lang("filterreset"));
+    $smarty->assign('filter',$filter);
+    $smarty->assign('filter_applied',$filter_applied);
+    $smarty->assign('SECURE_PARAM_NAME',CMS_SECURE_PARAM_NAME);
+    $smarty->assign('CMS_USER_KEY',$_SESSION[CMS_USER_KEY]);
 }
 
 echo $smarty->fetch('adminlog.tpl');
 
 include_once("footer.php");
-
-
-?>
